fixed story vertical spacing

--- a/mytimes/resources/styles/styles.css
+++ b/mytimes/resources/styles/styles.css
@@ -3,7 +3,7 @@ body {
   color: black; /*except in the logo`*/
   font-family: Georgia; /*except in the logo`*/
   font-size: 17px;
-  margin-top: 0;
+margin: 0;
 }
 
 span {
@@ -69,8 +69,6 @@ nav {
   justify-content: center;
   margin-top: 100;
   padding-top: 100px;
-  /*padding-left: 30px;*/
-  /*padding-right: 30px;*/
   align-self: center;;
   z-index: 10;
   height: 100%;
@@ -83,16 +81,14 @@ nav {
   flex-wrap: wrap;
   z-index: 10;
   height: 100%;
-  align-content: center;
+  align-content: flex-start;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .column.large {
   width: 630px;
   margin-right: 30px;
-  flex-direction: column;
-  align-content: flex-start;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 .column.medium {
@@ -116,10 +112,12 @@ nav {
 
 .story{             /* normal story settings*/
   width: 300px;
-  height: 100px;
+  height: 100%;
   min-height: 300px;
   margin-top: 15px;
   margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
 }
 
 .story span{        /* normal story headlines*/
